[project]
name = "fly-in"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{"name" = "nsato", "email" = "nsato@student.42tokyo.jp"}]

# これがないとプログラム実行時にエラー。
dependencies = [
	"numpy>=2.4.4",
	"pydantic>=2.12.5"
]
# 実行ロジックに違いはないが、開発、テスト、静的解析に必要。
[dependency-groups]
dev = [
	"flake8>=7.3.0",
	"mypy",
	"ruff",
	"ty",
	"pytest",
]

# [tool.uv.sources]

# [tool.uv.workspace]
# members = [""]

[tool.mypy]
exclude = [""]

warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
